--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/MainContentDonHang.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/MainContentDonHang.form
@@ -59,7 +59,6 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" attributes="0">
-                                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                                   <Component id="jButton3" min="-2" pref="153" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                                   <Component id="jButton2" min="-2" pref="153" max="-2" attributes="0"/>
@@ -151,8 +150,8 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="ALL"/>
-                <StringItem index="1" value="&#x110;&#xe3; x&#x1eed; l&#xfd;"/>
-                <StringItem index="2" value="Ch&#x1b0;a x&#x1eed; l&#xfd;"/>
+                <StringItem index="1" value="&#x110;&#xe3; x&#x1eed; l&#xed;"/>
+                <StringItem index="2" value="Ch&#x1b0;a x&#x1eed; l&#xed;"/>
                 <StringItem index="3" value="H&#x1ee7;y &#x111;&#x1a1;n"/>
               </StringArray>
             </Property>
