--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
@@ -127,7 +127,7 @@
                               </Group>
                               <EmptySpace pref="146" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="trangthailb" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="madhlb" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcGia1" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcBHKT" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcKhuyenMai" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -144,8 +144,13 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="confirmBtn" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="deleteBtn" max="32767" attributes="0"/>
+                              <Component id="deleteBtn" pref="152" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="lbTrangThai1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="trangthailb1" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -158,7 +163,7 @@
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lbTrangThai" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
-                          <Component id="trangthailb" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="madhlb" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -195,12 +200,17 @@
                           <Component id="lbGia1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbcgiasaukm" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lbTrangThai1" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
+                          <Component id="trangthailb1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="confirmBtn" alignment="3" min="-2" pref="49" max="-2" attributes="0"/>
                           <Component id="deleteBtn" alignment="3" min="-2" pref="49" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="42" max="32767" attributes="0"/>
+                      <EmptySpace pref="41" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -266,10 +276,10 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Tr&#x1ea1;ng Th&#xe1;i:"/>
+                <Property name="text" type="java.lang.String" value="M&#xe3; DH"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="trangthailb">
+            <Component class="javax.swing.JLabel" name="madhlb">
               <Properties>
                 <Property name="text" type="java.lang.String" value="jLabel10"/>
               </Properties>
@@ -355,6 +365,22 @@
                   <Image iconType="3" name="/Smartphone_sales_management/UI/Icon/Close-icon.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="H&#x1ee7;y &#x111;&#x1a1;n h&#xe0;ng"/>
+              </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="deleteBtnMouseClicked"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lbTrangThai1">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="14" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Tr&#x1ea1;ng Th&#xe1;i:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="trangthailb1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jLabel10"/>
               </Properties>
             </Component>
           </SubComponents>
