--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/BanHangComponent/ThongTinDonHang.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/BanHangComponent/ThongTinDonHang.form
@@ -332,6 +332,9 @@
                     </Property>
                     <Property name="opaque" type="boolean" value="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbbKhachHangItemStateChanged"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                   </AuxValues>
@@ -414,8 +417,11 @@
             </Component>
             <Component class="javax.swing.JCheckBox" name="cbDiem">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jCheckBox1"/>
+                <Property name="text" type="java.lang.String" value="0"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbDiemActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="lbnGiaSauKhuyenMai">
               <Properties>
